Have NewGame Play button create DungeonAdventure instance